test/errors/member_not_found.li
class Test { let a = 1; }
let x = Test();
x.b.c.d;
